Fix : 모달과 헤더 z-index 값 변경해서 헤더의 nav로 페이지 이동 불가하도록 수정

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   padding: 20px;
   background-color: var(--color-white);
-  z-index: 200;
+  z-index: 100;
 }
 
 .grid-container {
